--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bitcoinjs-lib": "^4.0.2",
+    "buffer": "^5.2.1",
     "expo": "^31.0.2",
     "firebase": "^5.5.9",
     "frisbee": "^2.0.5",
@@ -22,6 +23,8 @@
     "react-native-sensitive-info": "5.2.4",
     "react-native-snackbar": "0.5.0",
     "react-native-svg": "6.5.2",
+    "react-native-uuid": "^1.4.9",
+    "react-native-uuid-generator": "^5.0.0",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.12.1"
   },
