--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "bitcoinjs-lib": "^4.0.2",
     "buffer": "^5.2.1",
     "expo": "^31.0.2",
-    "firebase": "^5.5.9",
+    "firebase": "^5.6.0",
     "frisbee": "^2.0.5",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-camera": "1.2.0",
+    "react-native-firebase": "^5.1.1",
+    "react-native-level-fs": "^3.0.0",
     "react-native-modal": "6.5.0",
     "react-native-permissions": "1.1.1",
+    "react-native-qrcode-scanner": "^1.1.0",
     "react-native-qrcode-svg": "5.1.0",
     "react-native-sensitive-info": "5.2.4",
     "react-native-snackbar": "0.5.0",
     "react-native-svg": "6.5.2",
     "react-native-uuid": "^1.4.9",
-    "react-native-uuid-generator": "^5.0.0",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.12.1"
   },
