--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg": "6.5.2",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "5.0.0",
-    "react-navigation": "2.12.1"
+    "react-navigation": "2.12.1",
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
